kubernetes-networks/manifests/ntest-svc-headless.yml
kind: Service
apiVersion: v1
metadata:
  name: ntest-svc-headless
spec:
  selector:
    name: myapp-ntest
  type:  ClusterIP
  clusterIP: None
  ports:
  - name:  ui
    port:  80
    targetPort:  8000
