kubernetes-networks/manifests/ntest-svc-loadbalancer.yml
kind: Service
apiVersion: v1
metadata:
  name: ntest-svc-loadbalancer
spec:
  selector:
    name: myapp-ntest
  type:  LoadBalancer
  ports:
  - name:  ui
    port:  80
    targetPort:  8000
